amendment view: fix spacing

--- a/src/adhocracy/static_src/stylesheets/widgets/_paper.scss
+++ b/src/adhocracy/static_src/stylesheets/widgets/_paper.scss
@@ -2,7 +2,7 @@
     background: $bg1;
 
     .paper_header, .paper_text, .paper_comments {
-        padding: 20px 20px 0;
+        padding: 20px;
         border-bottom: 1px solid #fff;
     }
     .paper_text h4, .paper_comments h3, .paper_comments h4 {
